--- a/src/components/index-page/Hero/style.scss
+++ b/src/components/index-page/Hero/style.scss
@@ -16,7 +16,7 @@
     flex-direction: column;
 
     &__title {
-      @extend %h1;
+      @include h1;
 
       max-width: 818px;
       color: $c_white;
@@ -28,7 +28,7 @@
     }
 
     &__typewriter-title {
-      @extend %h1;
+      @include h1;
 
       margin-left: 12px;
       color: #6c6cff;
@@ -86,6 +86,166 @@
       width: 100%;
       height: 400px;
       background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000 100%);
+    }
+  }
+
+  @media (max-width: 1420px) {
+    &__hero-wrapper {
+      padding: 96px 0;
+    }
+
+    &__hero {
+      &__illustration {
+        &__background {
+          width: 900px;
+        }
+
+        &__foreground {
+          top: 233px;
+          right: -15px;
+          width: 300px;
+        }
+
+        &__button {
+          top: 455px;
+          right: 0;
+          width: 270px;
+        }
+      }
+
+      &__overlay {
+        height: 360px;
+      }
+    }
+  }
+
+  @media #{$screen-max-md} {
+    &__hero-wrapper {
+      padding: 80px 0;
+    }
+
+    &__hero {
+      &__title,
+      &__typewriter-title {
+        @include h2;
+      }
+
+      &__title {
+        max-width: 700px;
+      }
+
+      &__illustration {
+        &__background {
+          width: 680px;
+        }
+
+        &__foreground {
+          top: -375px;
+          right: -2px;
+          width: 220px;
+        }
+
+        &__button {
+          top: -210px;
+          right: 10px;
+          width: 200px;
+        }
+      }
+
+      &__overlay {
+        bottom: -20px;
+        height: 200px;
+      }
+    }
+  }
+
+  @media #{$screen-max-sm} {
+    &__hero {
+      &__title,
+      &__typewriter-title {
+        @include h3;
+      }
+
+      &__title {
+        max-width: 550px;
+      }
+
+      &__subtitle {
+        @include base-3;
+
+        max-width: 335px;
+        margin-top: 12px;
+      }
+
+      &__button {
+        margin-top: 24px;
+      }
+
+      &__illustration {
+        margin-top: 64px;
+      }
+    }
+  }
+
+  @media (max-width: 725px) {
+    &__hero {
+      &__illustration {
+        &__background {
+          width: 500px;
+        }
+
+        &__foreground {
+          top: -277px;
+          right: -8px;
+          width: 165px;
+        }
+
+        &__button {
+          top: -155px;
+          right: -1px;
+          width: 150px;
+        }
+      }
+
+      &__overlay {
+        height: 150px;
+      }
+    }
+  }
+
+  @media (max-width: 560px) {
+    &__hero__title {
+      max-width: 335px;
+
+      span > div {
+        display: block;
+      }
+    }
+  }
+
+  @media (max-width: 540px) {
+    &__hero {
+      &__illustration {
+        &__background {
+          width: 310px;
+        }
+
+        &__foreground {
+          top: -172px;
+          right: -10px;
+          width: 108px;
+        }
+
+        &__button {
+          top: -93px;
+          right: -4px;
+          width: 96px;
+        }
+      }
+
+      &__overlay {
+        height: 105px;
+      }
     }
   }
 }
