--- a/src/pages/style.scss
+++ b/src/pages/style.scss
@@ -58,6 +58,14 @@
   letter-spacing: 0;
 }
 
+@mixin h1 {
+  font-family: $font-primary;
+  font-size: 60px;
+  font-weight: 400;
+  line-height: 68px;
+  letter-spacing: 0;
+}
+
 @mixin h2 {
   font-family: $font-primary;
   font-size: 48px;
