--- a/src/components/index-page/WhatWeDo/style.scss
+++ b/src/components/index-page/WhatWeDo/style.scss
@@ -74,6 +74,7 @@
 
     @media #{$screen-max-sm} {
       &__title {
+        margin: 0;
         font-size: 32px;
         line-height: 40px;
       }
