--- a/src/components/index-page/Hero/style.scss
+++ b/src/components/index-page/Hero/style.scss
@@ -3,7 +3,8 @@
 
 .IndexPage {
   &__hero-wrapper {
-    padding: 96px 100px 192px 100px;
+    padding: 96px 100px;
+    overflow: hidden;
     background-color: black;
   }
 
@@ -51,7 +52,7 @@
     &__button {
       width: 229px;
       height: 60px;
-      margin-top: 66px;
+      margin-top: 48px;
       padding: 18px 15px !important;
     }
 
