landing page tweaks&fixes

--- a/src/components/index-page/Jsgenesis/style.scss
+++ b/src/components/index-page/Jsgenesis/style.scss
@@ -21,6 +21,7 @@
     &__section-title {
       @extend %section-title;
 
+      display: inline-block;
       color: $c_blue-ribbon;
       text-align: center;
     }
