--- a/src/components/index-page/JoystreamDAO/style.scss
+++ b/src/components/index-page/JoystreamDAO/style.scss
@@ -114,8 +114,17 @@
       }
 
       &__illustration {
+        transform: scale(1.25);
+        transform-origin: left;
+
+        &__background {
+          bottom: unset;
+          left: 20px;
+        }
+
         &__foreground {
-          bottom: -425px;
+          bottom: -375px;
+          left: 10px;
         }
       }
     }
@@ -142,19 +151,16 @@
       &__illustration {
         width: 100%;
         height: 280px;
+        margin-bottom: 50px;
 
         &__background {
-          right: 0;
-          bottom: unset;
-          left: 50px;
+          left: 70px;
           width: 400px;
-          margin: auto;
         }
 
         &__foreground {
-          right: 10px;
           bottom: -283px;
-          left: 0;
+          left: 50px;
           width: 380px;
           margin: auto;
         }
@@ -165,15 +171,17 @@
   @media (max-width: 500px) {
     &__joystream-dao {
       &__illustration {
-        height: 207px;
+        height: 250px;
+        transform: scale(1.5);
 
         &__background {
-          left: 33px;
+          left: 30px;
           width: 301px;
         }
 
         &__foreground {
           bottom: -212px;
+          left: 15px;
           width: 298px;
         }
       }
