--- a/src/components/index-page/VideoNFTs/style.scss
+++ b/src/components/index-page/VideoNFTs/style.scss
@@ -21,12 +21,14 @@
       &__foreground {
         position: absolute;
         left: 104px;
+        width: 308px;
       }
 
       &__popup {
         position: absolute;
         right: 100px;
         bottom: -50px;
+        width: 208px;
       }
     }
 
@@ -142,6 +144,7 @@
       &__illustration {
         width: 100%;
         height: 290px;
+        transform: scale(1.3);
 
         &__background {
           top: unset;
