fix border radius issue with Pioneer images

--- a/src/components/index-page/JoystreamDAO/style.scss
+++ b/src/components/index-page/JoystreamDAO/style.scss
@@ -65,6 +65,7 @@
         right: 0;
         bottom: 18%;
         width: 86%;
+        border-radius: 8px;
         box-shadow: 0 0 18px rgba(3, 0, 65, .1), 0 0 4.02054px rgba(3, 0, 65, .0596107), 0 0 1.19702px rgba(3, 0, 65, .0403893);
       }
 
@@ -73,6 +74,7 @@
         bottom: 35px;
         left: 15px;
         width: 95%;
+        border-radius: 8px;
         box-shadow: 0 0 18px rgba(3, 0, 65, .1), 0 0 4.02054px rgba(3, 0, 65, .0596107), 0 0 1.19702px rgba(3, 0, 65, .0403893);
       }
     }
