fix footer social links Safari issue

--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -122,6 +122,7 @@
 
   &__social-link {
     display: flex;
+    align-items: center;
     flex-direction: row;
     width: fit-content;
     margin-top: 12px;
