Replace all landing page associated extracted css component styles into mixins

--- a/src/components/index-page/JoystreamDAO/style.scss
+++ b/src/components/index-page/JoystreamDAO/style.scss
@@ -20,7 +20,7 @@
       justify-content: center;
 
       &__section-title {
-        @extend %section-title;
+        @include section-title;
 
         color: $c_blue-ribbon;
       }
