--- a/src/components/index-page/CreatorTokens/style.scss
+++ b/src/components/index-page/CreatorTokens/style.scss
@@ -17,7 +17,7 @@
       flex-direction: column;
 
       &__coming-soon {
-        @extend %base-5;
+        @include base-5;
 
         padding: 4px 8px;
         color: #a7aeb7;
@@ -26,14 +26,14 @@
       }
 
       &__section-title {
-        @extend %section-title;
+        @include section-title;
 
         margin-top: 32px;
         color: #6c6cff;
       }
 
       &__title {
-        @extend %h3;
+        @include h3;
 
         max-width: 816px;
         margin-top: 4px;
@@ -114,7 +114,7 @@
         justify-content: center;
 
         &__section-title {
-          @extend %section-title-md;
+          @include section-title-md;
 
           color: #6c6cff;
         }
@@ -127,7 +127,7 @@
         }
 
         &__subtitle {
-          @extend %base-3;
+          @include base-3;
 
           margin-top: 16px;
           color: #a7aeb7;
@@ -147,20 +147,20 @@
         justify-content: center;
 
         &__section-title {
-          @extend %section-title-md;
+          @include section-title-md;
 
           color: #6c6cff;
         }
 
         &__title {
-          @extend %h6;
+          @include h6;
 
           margin-top: 4px;
           color: $c_white;
         }
 
         &__subtitle {
-          @extend %base-3;
+          @include base-3;
 
           margin-top: 16px;
           color: #a7aeb7;
@@ -190,20 +190,20 @@
         justify-content: center;
 
         &__section-title {
-          @extend %section-title-md;
+          @include section-title-md;
 
           color: #6c6cff;
         }
 
         &__title {
-          @extend %h6;
+          @include h6;
 
           margin-top: 4px;
           color: $c_white;
         }
 
         &__subtitle {
-          @extend %base-3;
+          @include base-3;
 
           margin-top: 16px;
           color: #a7aeb7;
@@ -223,20 +223,20 @@
         justify-content: center;
 
         &__section-title {
-          @extend %section-title-md;
+          @include section-title-md;
 
           color: #6c6cff;
         }
 
         &__title {
-          @extend %h6;
+          @include h6;
 
           margin-top: 4px;
           color: $c_white;
         }
 
         &__subtitle {
-          @extend %base-3;
+          @include base-3;
 
           margin-top: 16px;
           padding-right: 15px;
