--- a/src/components/index-page/Hero/style.scss
+++ b/src/components/index-page/Hero/style.scss
@@ -46,7 +46,7 @@
     }
 
     &__subtitle {
-      @extend %base-1;
+      @include base-1;
 
       margin-top: 24px;
       color: #a7aeb7;
@@ -67,7 +67,7 @@
     }
 
     &__button-text {
-      @extend %landing-page-button-text;
+      @include landing-page-button-text;
     }
 
     &__illustration {
