--- a/src/components/index-page/VideoNFTs/style.scss
+++ b/src/components/index-page/VideoNFTs/style.scss
@@ -59,6 +59,138 @@
     }
   }
 
+  &__video-nfts-carousel {
+    margin-top: 96px;
+
+    &__title-and-info {
+      @extend %container;
+
+      display: flex;
+      justify-content: space-between;
+
+      &__title {
+        @include h6;
+
+        color: $c_white;
+      }
+
+      &__info {
+        @include base-5;
+
+        position: relative;
+        display: flex;
+        align-items: center;
+        color: $c_white;
+
+        &__icon {
+          margin-left: 6px;
+        }
+
+        &__modal {
+          position: absolute;
+          right: 0;
+          bottom: 30px;
+          width: 240px;
+          height: 190px;
+          padding: 12px 12px 18px 12px;
+          color: $c_ebony-clay;
+          background-color: $c_neutral-200;
+          opacity: 0;
+          visibility: hidden;
+          transition: visibility .2s linear, opacity .2s linear;
+          clip-path:
+            polygon(
+              0% 0%,
+              100% 0%,
+              100% calc(100% - 6px),
+              100% 100%,
+              calc(100% - 8px) calc(100% - 6px),
+              0% calc(100% - 6px)
+            );
+        }
+
+        &:hover &__modal {
+          opacity: 1;
+          visibility: visible;
+        }
+      }
+    }
+
+    &__items {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-top: 32px;
+    }
+
+    &__item {
+      width: 288px;
+      height: 354px;
+      background-color: $c_ebony-clay;
+
+      &__image {
+        width: 100%;
+        height: 162px;
+        background: rgba(0, 0, 0, .3);
+      }
+
+      &__content {
+        padding: 24px;
+
+        &__title {
+          @include base-5;
+
+          color: rgba(129, 133, 141, 1);
+
+          & > span {
+            color: #f2f5f9;
+          }
+        }
+
+        &__price {
+          display: flex;
+          flex-direction: column;
+          margin-top: 16px;
+
+          &__title {
+            @include base-5;
+
+            color: #a7aeb7;
+          }
+
+          &__amount {
+            @include h7;
+
+            margin-top: 4px;
+            color: $c_grayc-chateau;
+
+            & > span {
+              font-size: 32px;
+              font-weight: 700;
+              line-height: 40px;
+              letter-spacing: 0;
+              color: $c_white;
+              text-align: left;
+            }
+          }
+        }
+
+        &__time {
+          @include base-5;
+
+          display: flex;
+          align-items: center;
+          margin-top: 16px;
+          color: $c_grayc-chateau;
+
+          &__icon {
+            margin-right: 6px;
+          }
+        }
+      }
+    }
+  }
+
   &__video-nfts-cta {
     @extend %largeContainer;
 
