--- a/src/components/index-page/JoystreamDAO/style.scss
+++ b/src/components/index-page/JoystreamDAO/style.scss
@@ -80,6 +80,103 @@
     }
   }
 
+  &__joystream-dao-carousel {
+    margin-top: 96px;
+
+    &__title-section {
+      @extend %container;
+
+      &__text {
+        @include h6;
+      }
+    }
+
+    &__items {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-top: 32px;
+    }
+
+    &__item {
+      width: 288px;
+      height: 288px;
+      padding: 24px;
+      background-color: $c_white;
+
+      &__image {
+        width: 40px;
+        height: 40px;
+        background-color: rgba(0, 0, 0, .3);
+        border-radius: 50%;
+      }
+
+      &__title {
+        @include h6;
+
+        margin-top: 24px;
+      }
+
+      &__info {
+        display: flex;
+        margin-top: 16px;
+        gap: 24px;
+
+        &__status {
+          min-width: 108px;
+
+          &__label {
+            @include base-5;
+
+            color: #81858d;
+          }
+
+          &__value {
+            @include base-5;
+
+            display: grid;
+            width: 72px;
+            height: 24px;
+            margin-top: 8px;
+            background: #dee3e9;
+            border-radius: 999px;
+            place-items: center;
+          }
+        }
+
+        &__date {
+          &__label {
+            @include base-5;
+
+            color: #81858d;
+          }
+
+          &__value {
+            @include h9;
+
+            margin-top: 4px;
+          }
+        }
+      }
+
+      &__link {
+        @include h9;
+
+        display: block;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 149px;
+        margin-top: 24px;
+
+        &__icon {
+          margin-top: 3px;
+          transform: rotate(-90deg) scale(.75);
+        }
+      }
+    }
+  }
+
   @media #{$screen-max-lg} {
     &__joystream-dao {
       display: flex;
