Update tooltip copy text and styling for payouts and video nfts carousel sections

--- a/src/components/index-page/Payouts/style.scss
+++ b/src/components/index-page/Payouts/style.scss
@@ -93,7 +93,7 @@
           right: 0;
           bottom: 30px;
           width: 240px;
-          height: 190px;
+          height: auto;
           padding: 12px 12px 18px 12px;
           color: $c_ebony-clay;
           background-color: $c_neutral-200;
