--- a/src/components/index-page/Payouts/style.scss
+++ b/src/components/index-page/Payouts/style.scss
@@ -110,11 +110,29 @@
       }
     }
 
+    &__items-wrapper {
+      --payouts-carousel-gap: 24px;
+
+      display: flex;
+      max-width: 1440px;
+      margin: 0 auto;
+      margin-top: 32px;
+      overflow: hidden;
+      gap: var(--payouts-carousel-gap);
+    }
+
     &__items {
       display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-top: 32px;
+      flex-shrink: 0;
+      justify-content: space-between;
+      min-width: 100%;
+      animation: payouts-horizontal-scroll-animation 15s linear infinite;
+      animation-play-state: running;
+      gap: var(--payouts-carousel-gap);
+
+      &--paused {
+        animation-play-state: paused;
+      }
     }
 
     &__item {
@@ -402,5 +420,15 @@
         }
       }
     }
+  }
+}
+
+@keyframes payouts-horizontal-scroll-animation {
+  from {
+    transform: translateX(0);
+  }
+
+  to {
+    transform: translateX(calc(-100% - var(--payouts-carousel-gap)));
   }
 }
