--- a/src/components/index-page/JoystreamDAO/style.scss
+++ b/src/components/index-page/JoystreamDAO/style.scss
@@ -91,11 +91,29 @@
       }
     }
 
+    &__items-wrapper {
+      --joystream-dao-carousel-gap: 24px;
+
+      display: flex;
+      max-width: 1440px;
+      margin: 0 auto;
+      margin-top: 32px;
+      overflow: hidden;
+      gap: var(--joystream-dao-carousel-gap);
+    }
+
     &__items {
       display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-top: 32px;
+      flex-shrink: 0;
+      justify-content: space-between;
+      min-width: 100%;
+      animation: joystream-dao-horizontal-scroll-animation 15s linear infinite;
+      animation-play-state: running;
+      gap: var(--joystream-dao-carousel-gap);
+
+      &--paused {
+        animation-play-state: paused;
+      }
     }
 
     &__item {
@@ -114,6 +132,7 @@
       &__title {
         @include h6;
 
+        min-height: 64px;
         margin-top: 24px;
       }
 
@@ -138,9 +157,14 @@
             width: 72px;
             height: 24px;
             margin-top: 8px;
-            background: #dee3e9;
+            background-color: #dee3e9;
             border-radius: 999px;
             place-items: center;
+
+            &--rejected {
+              color: #ff3861;
+              background-color: rgba(255, 56, 97, .1);
+            }
           }
         }
 
@@ -285,5 +309,15 @@
         }
       }
     }
+  }
+}
+
+@keyframes joystream-dao-horizontal-scroll-animation {
+  from {
+    transform: translateX(0);
+  }
+
+  to {
+    transform: translateX(calc(-100% - var(--joystream-dao-carousel-gap)));
   }
 }
