--- a/src/components/index-page/JoystreamDAO/style.scss
+++ b/src/components/index-page/JoystreamDAO/style.scss
@@ -1,5 +1,6 @@
 @import '../../../styles/main';
 @import '../../../pages/style';
+@import '../shared-styles';
 
 .IndexPage {
   &__joystream-dao-wrapper {
@@ -81,6 +82,8 @@
   }
 
   &__joystream-dao-carousel {
+    $carousel-gap: 24px;
+
     margin-top: 96px;
 
     &__title-section {
@@ -92,24 +95,22 @@
     }
 
     &__items-wrapper {
-      --joystream-dao-carousel-gap: 24px;
-
       display: flex;
       max-width: 1440px;
       margin: 0 auto;
       margin-top: 32px;
       overflow: hidden;
-      gap: var(--joystream-dao-carousel-gap);
+      gap: $carousel-gap;
     }
 
     &__items {
+      @include animate-carousel($carousel-gap, 25s);
+
       display: flex;
       flex-shrink: 0;
       justify-content: space-between;
       min-width: 100%;
-      animation: joystream-dao-horizontal-scroll-animation 25s linear infinite;
-      animation-play-state: running;
-      gap: var(--joystream-dao-carousel-gap);
+      gap: $carousel-gap;
 
       &--paused {
         animation-play-state: paused;
@@ -309,15 +310,5 @@
         }
       }
     }
-  }
-}
-
-@keyframes joystream-dao-horizontal-scroll-animation {
-  from {
-    transform: translateX(0);
-  }
-
-  to {
-    transform: translateX(calc(-100% - var(--joystream-dao-carousel-gap)));
   }
 }
