Add line-clamp to joystreamDAO and VideoNFT carousel item titles

--- a/src/components/index-page/JoystreamDAO/style.scss
+++ b/src/components/index-page/JoystreamDAO/style.scss
@@ -132,6 +132,7 @@
 
       &__title {
         @include h6;
+        @include line-clamp(2);
 
         min-height: 64px;
         margin-top: 24px;
