--- a/src/components/index-page/shared-styles.scss
+++ b/src/components/index-page/shared-styles.scss
@@ -14,3 +14,19 @@
   animation: $animation-name $animation-length linear infinite;
   animation-play-state: running;
 }
+
+// This is the easiest css-only solution for clamping and adding an
+// ellipsis to overflowing text. I've tested this solution and it works
+// (chrome/firefox) but that may change at any time as this is really
+// deprecated functionality. Will keep it in as it checks every box we
+// need it for at this time.
+
+@mixin line-clamp($number-of-lines) {
+  @supports (-webkit-line-clamp: $number-of-lines) {
+    display: -webkit-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: $number-of-lines;
+  }
+}
