Implement image functionality (along with fallback placeholder in case of loading failure) in joystreamDAO and payouts carousel items

--- a/src/components/index-page/Payouts/style.scss
+++ b/src/components/index-page/Payouts/style.scss
@@ -147,6 +147,10 @@
         height: 40px;
         background: rgba(0, 0, 0, .3);
         border-radius: 50%;
+
+        & > img {
+          width: 100%;
+        }
       }
 
       &__price {
