--- a/src/components/index-page/JoystreamDAO/style.scss
+++ b/src/components/index-page/JoystreamDAO/style.scss
@@ -128,6 +128,10 @@
         height: 40px;
         background-color: rgba(0, 0, 0, .3);
         border-radius: 50%;
+
+        & > img {
+          width: 100%;
+        }
       }
 
       &__title {
