--- a/src/components/index-page/CreatorTokens/style.scss
+++ b/src/components/index-page/CreatorTokens/style.scss
@@ -28,8 +28,10 @@
       &__section-title {
         @include section-title;
 
+        display: block;
         margin-top: 32px;
         color: #6c6cff;
+        text-align: center;
       }
 
       &__title {
